dockercoins/kibana/kibana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: logging
  labels:
    k8s-app: kibana
spec:
  selector:
    matchLabels:
      k8s-app: kibana
  template:
    metadata:
      labels:
        k8s-app: kibana
    spec:
      containers:
      - image: docker.elastic.co/kibana/kibana:6.8.20
        name: kibana-container
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5601
          protocol: TCP
        volumeMounts:
          - name: kibana-configmap
            mountPath: /etc/kibana/kibana.yaml
      volumes:
      - name: kibana-configmap
        configMap:
          name: kibana-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-svc
  namespace: logging
spec:
  type: LoadBalancer
  ports:
    - name: kibana-svc
      protocol: TCP
      port: 80
      targetPort: 5601
  selector:
    k8s-app: kibana
